src/objects/ints__EquipmentDetail__c.object
<CustomObject>
    <fields>
        <fullName>ints__Blackbook_Result__c</fullName>
        <label>Blackbook Result</label>
        <referenceTo>ints__Blackbook_Result__c</referenceTo>
        <relationshipLabel>EquipmentDetails</relationshipLabel>
        <relationshipName>EquipmentDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Class_Code__c</fullName>
        <description>One character code that corresponds to the vehicle classification (H, M or T) [There are three values for Black Book vehicle classification  : &quot;Heavy Duty Truck&quot;, &quot;Medium Duty Truck&quot; and &quot;Trailer&quot;]</description>
        <label>Class Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Class_Name__c</fullName>
        <description>Black Book vehicle classification description. There are three values for this field: &quot;Heavy Duty Truck&quot;, &quot;Medium Duty Truck&quot; and &quot;Trailer&quot;</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Engine_Displacement__c</fullName>
        <label>Engine Displacement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Features__c</fullName>
        <label>Features</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ints__Make__c</fullName>
        <label>Vehicle Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Manufacturer__c</fullName>
        <label>Manufacturer name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Mileage_Cat__c</fullName>
        <label>Mileage Category</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Model_Year__c</fullName>
        <label>Model Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Publish_Date__c</fullName>
        <label>Publish Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Style__c</fullName>
        <label>Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Transmission__c</fullName>
        <label>Transmission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__adjusted_finadv__c</fullName>
        <label>Finance Advance Adjusted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__adjusted_retail_avg__c</fullName>
        <label>Retail Average Adjusted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__adjusted_whole_avg__c</fullName>
        <label>Wholesale Average Adjusted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__adjusted_whole_rough__c</fullName>
        <label>Wholesale Rough Adjusted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__base_finadv__c</fullName>
        <label>Finance Advance Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__base_hp__c</fullName>
        <label>Base Horse Power</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__base_retail_avg__c</fullName>
        <label>Retail Average Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__base_whole_avg__c</fullName>
        <label>Wholesale Average Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__base_whole_rough__c</fullName>
        <label>Wholesale Rough Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__cylinders__c</fullName>
        <label>Number of Engine Cylinders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__gcw__c</fullName>
        <label>Gross Combination Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__gvw__c</fullName>
        <label>Gross Vehicle Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__mileage_finadv__c</fullName>
        <label>Finance Advance Mileage Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__mileage_retail_avg__c</fullName>
        <label>Retail Average Mileage Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__mileage_whole_avg__c</fullName>
        <label>Wholesale Average Mileage Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__mileage_whole_rough__c</fullName>
        <label>Wholesale Rough Mileage Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__model_number__c</fullName>
        <description>Manufacturer&apos;s model number that corresponds to this vehicle.</description>
        <label>Manufacturer&apos;s model number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__msrp__c</fullName>
        <label>Manufacturer&apos;s Suggested Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__uvc__c</fullName>
        <description>It is a 10 character identifier that is made up of three parts: Model Year (4 characters) Example: 2002
Manufacturer Code (3 characters) Example: 440 (Isuzu)
Vehicle Id (3 characters) Example: 021 (N-Series NQR Cabover 4X2 (CA88-155))</description>
        <label>BlackBook Universal Vehicle Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__vin__c</fullName>
        <label>Vehicle Identification Number</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <label>EquipmentDetail</label>
    <nameField>
        <displayFormat>EQD-{0000000000}</displayFormat>
        <label>Equipment Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EquipmentDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>